--- a/style.css
+++ b/style.css
@@ -75,7 +75,15 @@ h6 {
   isolation: isolate;
 }
 
-/* Color variables */
+/* 11. Reset button style */
+button {
+  padding: 0;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+/* Variables */
 :root {
   /* Main background (warm cream) */
   --color-bg: #f6f2ea;
@@ -97,14 +105,36 @@ h6 {
 
   /* Borders */
   --color-border: #e6dfd2;
+
+  --font-display: "Playfair Display", serif;
+  --font-body: "Source Sans 3", sans-serif;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Source+Sans+3:wght@300;400;500;600&display=swap");
 
 body {
   background: var(--color-bg);
+  font-family: var(--font-body);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-display);
 }
 
 dialog {
   background: var(--color-bg);
+}
+
+.add-book-btn {
+  background-color: var(--color-primary);
+  color: white;
+  padding: 10px 32px;
+  border-radius: 10px;
+  font-size: 14px;
 }
 
 /*Switch toggle from W3schools*/
