--- a/style.css
+++ b/style.css
@@ -176,10 +176,16 @@ section {
   border: 1px solid var(--color-border);
   padding: 12px 18px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-
+  transition: transform 0.2s;
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.card:hover {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  transform: scale(1.02);
+  cursor: pointer;
 }
 
 .card h2 {
@@ -228,6 +234,28 @@ section {
   border: 2px solid var(--color-accent);
   color: var(--color-accent);
   cursor: pointer;
+}
+
+.edit-wrapper {
+  margin-left: auto;
+  display: flex;
+  gap: 2rem;
+}
+
+.edit-icon,
+.delete-icon {
+  width: 20px;
+  transition: transform 0.2s;
+}
+
+.edit-icon:hover,
+.delete-icon:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+}
+
+.delete-icon {
+  color: rgb(212, 34, 34);
 }
 
 /* Dialog */
